  * A menu allowing to switch floats to engineering format.
  * A context-sensitive "draw" sidepane
  * Maxima now tells us all variables we need autocompletion for.
  * We now have autocompletion for functions from lisp-only packages, too.
  * Maxima can now pass variables to wxMaxima
  * We now allow a packet from maxima to end in the middle of an unicode codepoint.
  * Code simplifications
  * Big performance improvements, again.

18.02:
  * More tooltips
  * A menu containing the most important commands for lists.
  * TableOfContents: A right-click menu item that allows to toggle display of section numbers
  * The size of images can now be restricted to any amount of centimeters.
  * On a few operating systems: The network indicator icon now knows how much CPU
    power maxima uses.
  * Autocompletion now suggests the names of built-in packages for load(), batch()
    and batchload().
  * Autocompletion now suggests the names of built-in demos for demo().
  * wxMaxima can now handle requests to display raw lisp elements.
  * A drop-down box for changing cell styles
  * If an input cell is hidden and has no output it now is no more displayed
    as a blank vertical space.
  * wxMaxima no more requires the icon files, tooltips and autocompletion files to be
    shipped as separate files, which makes creating a ready-to-install package of wxMaxima
    easier and less error-prone.
  * Autosave is now enabled by default on new installs.
  * Big code cleanups.
  * Many bugfixes
  * Many performance improvements
  * Dropped the autotools as the cmake build of wxMaxima is way more powerful.

17.10:
  * Jump to the char containing the error on encountering unmatched parenthesis.
  * Try to place the cursor near the error in all other cases.
  * Attempt to mark the whole error message in red. This is bound to fail in
    some cases as maxima sometimes only sends part of an error message through
    the error() command. But it is better than nothing.