@@ -7,6 +7,7 @@ Current:
   * We now have autocompletion for functions from lisp-only packages, too.
   * Maxima can now pass variables to wxMaxima
   * We now allow a packet from maxima to end in the middle of an unicode codepoint.
+  * A right-click menu that copies an animation to the clipboard
   * Code simplifications
   * Big performance improvements, again.
 
